Fix dark mode background color

--- a/app/assets/scss/vcss.scss
+++ b/app/assets/scss/vcss.scss
@@ -104,7 +104,7 @@ nav ul {
  */
 
 nav li::before {
-  content: "\200B";
+  content: '\200B';
 }
 
 /**
@@ -242,9 +242,9 @@ button {
  */
 
 button,
-[type="button" i],
-[type="reset" i],
-[type="submit" i] {
+[type='button' i],
+[type='reset' i],
+[type='submit' i] {
   -webkit-appearance: button;
 }
 
@@ -289,7 +289,7 @@ textarea {
  * 2. Correct the outline style in Safari.
  */
 
-[type="search" i] {
+[type='search' i] {
   -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
@@ -398,7 +398,7 @@ summary {
  * Change the cursor on busy elements in all browsers (opinionated).
  */
 
-[aria-busy="true" i] {
+[aria-busy='true' i] {
   cursor: progress;
 }
 
@@ -415,7 +415,7 @@ summary {
  * inoperable elements in all browsers (opinionated).
  */
 
-[aria-disabled="true" i],
+[aria-disabled='true' i],
 [disabled] {
   cursor: not-allowed;
 }
@@ -425,17 +425,17 @@ summary {
  * in all browsers (opinionated).
  */
 
-[aria-hidden="false" i][hidden] {
+[aria-hidden='false' i][hidden] {
   display: initial;
 }
 
-[aria-hidden="false" i][hidden]:not(:focus) {
+[aria-hidden='false' i][hidden]:not(:focus) {
   clip: rect(0, 0, 0, 0);
   position: absolute;
 }
 
 // Colors
-$primary: #074CB2 !default;
+$primary: #074cb2 !default;
 $text: #222 !default;
 $white: #fff !default;
 $black: #000 !default;
@@ -447,7 +447,7 @@ $line: #eaeaea !default;
 $disabled: #fafafa !default;
 $medium: #ccc !default;
 $preserve: #fafafa !default;
-$button: #F17C57 !default;
+$button: #f17c57 !default;
 $small: #999 !default;
 
 // Basic stylings
@@ -480,7 +480,8 @@ $button-color: $text !default;
 $button-padding: $sm-pad $md-pad !default;
 $button-border: 1px solid $button !default;
 $button-font-size: 1rem !default;
-$button-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
+$button-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+  border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out !default;
 $button-hover-background-color: darken($button, 7.5%) !default;
 $button-active-background-color: darken($button, 10%) !default;
 $button-focus-outline: 0 !default;
@@ -504,7 +505,8 @@ $input-invalid-color: $danger !default;
 $input-focus-invalid-outline-color: $danger !default;
 
 // Font
-$sans-serif: Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol" !default;
+$sans-serif: Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
+  'Segoe UI Emoji', 'Segoe UI Symbol' !default;
 $serif: Georgia, Times, 'Times New Roman', serif !default;
 $monospace: Menlo, Monaco, Consolas, 'Courier New', monospace !default;
 $font-family: $sans-serif !default;
@@ -586,7 +588,7 @@ body {
   font-size: $font-size;
   line-height: $line-height;
   @media (prefers-color-scheme: dark) {
-    background-color: darken($primary, 25%);
+    background-color: darken($primary, 30%);
     color: $light;
   }
 }
@@ -727,19 +729,19 @@ mark {
 }
 
 input:not([type]),
-input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="url"],
-input[type="date"],
-input[type="month"],
-input[type="time"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="week"],
-input[type="number"],
-input[type="search"],
-input[type="tel"],
+input[type='text'],
+input[type='password'],
+input[type='email'],
+input[type='url'],
+input[type='date'],
+input[type='month'],
+input[type='time'],
+input[type='datetime'],
+input[type='datetime-local'],
+input[type='week'],
+input[type='number'],
+input[type='search'],
+input[type='tel'],
 select,
 textarea,
 trix-editor,
@@ -754,7 +756,7 @@ trix-editor,
   font-size: 1rem;
   padding: $sm-pad $md-pad;
   line-height: 1.5;
-  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   font-family: $sans-serif;
   word-break: normal;
   &:focus {
@@ -774,7 +776,7 @@ trix-editor,
   @include focus;
 }
 
-input[type="color"] {
+input[type='color'] {
   background: $white;
   border: $border;
   border-radius: $border-radius;
@@ -782,9 +784,9 @@ input[type="color"] {
   vertical-align: middle;
 }
 
-input[type="file"]:focus,
-input[type="radio"]:focus,
-input[type="checkbox"]:focus {
+input[type='file']:focus,
+input[type='radio']:focus,
+input[type='checkbox']:focus {
   outline: $input-outline;
 }
 
@@ -795,9 +797,9 @@ select:focus:invalid {
   color: $input-invalid-color;
 }
 
-input[type="file"]:focus:invalid:focus,
-input[type="radio"]:focus:invalid:focus,
-input[type="checkbox"]:focus:invalid:focus {
+input[type='file']:focus:invalid:focus,
+input[type='radio']:focus:invalid:focus,
+input[type='checkbox']:focus:invalid:focus {
   outline-color: $input-focus-invalid-outline-color;
 }
 
@@ -837,8 +839,8 @@ textarea {
   resize: vertical;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
+input[type='checkbox'],
+input[type='radio'] {
   box-sizing: border-box;
   padding: 0;
   display: inline;
@@ -853,9 +855,9 @@ form em {
 form fieldset {
   margin: 0 0 $md-pad;
 }
-input[type=submit],
-input[type=reset],
-input[type=button],
+input[type='submit'],
+input[type='reset'],
+input[type='button'],
 button,
 .button {
   background-color: $button-background-color;
@@ -879,41 +881,41 @@ button,
   }
 }
 
-input[type=submit]::-moz-focus-inner,
-input[type=reset]::-moz-focus-inner,
-input[type=button]::-moz-focus-inner,
+input[type='submit']::-moz-focus-inner,
+input[type='reset']::-moz-focus-inner,
+input[type='button']::-moz-focus-inner,
 button::-moz-focus-inner {
   padding: 0;
 }
 
-input[type=submit]:hover,
-input[type=reset]:hover,
-input[type=button]:hover,
+input[type='submit']:hover,
+input[type='reset']:hover,
+input[type='button']:hover,
 button:hover,
 .button:hover {
   background-color: $button-hover-background-color;
 }
 
-input[type=submit]:not(:disabled):active,
-input[type=reset]:not(:disabled):active,
-input[type=button]:not(:disabled):active,
+input[type='submit']:not(:disabled):active,
+input[type='reset']:not(:disabled):active,
+input[type='button']:not(:disabled):active,
 button:not(:disabled):active,
 .button:active {
   background-color: $button-active-background-color;
 }
 
-input[type=submit]:focus,
-input[type=reset]:focus,
-input[type=button]:focus,
+input[type='submit']:focus,
+input[type='reset']:focus,
+input[type='button']:focus,
 button:focus,
 .button:focus {
   outline: $button-focus-outline;
   box-shadow: $button-focus-shadow;
 }
 
-input[type=submit]:disabled,
-input[type=reset]:disabled,
-input[type=button]:disabled,
+input[type='submit']:disabled,
+input[type='reset']:disabled,
+input[type='button']:disabled,
 button:disabled,
 .button.disabled {
   opacity: 0.65;
